--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -8,7 +8,13 @@
 </head>
 
 <body>
-
+    <h1>How to upload my works to Git</h1>
+    <h2>First Step</h2>
+    <h3>git add .</h3>
+    <h2>Second Step</h2>
+    <h3>git commit -m "XXX"</h3>
+    <h2>Third Step</h2>
+    <h3>git push</h3>
 </body>
 
 </html>
